Fix programs not updated when fetching many in parallel

Fetching many programs in parallel failed with "Server refused a stream".

This is a known bug with HTTP/2 (see https://bugreports.qt.io/browse/QTBUG-73947). It was introduced by Qt6 which uses HTTP/2 by default (see https://doc.qt.io/qt-6/network-changes-qt6.html#http-2-is-enabled-by-default).

Force HTTP/1.1 to avoid the problem.